# ToolDepot

./: .gitignore  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
hub/cli/: package.json  tsconfig.json
hub/core/: package.json  tsconfig.json
hub/desktop/: index.html  package.json  vite.config.ts
hub/desktop/src-tauri/: Cargo.toml  tauri.conf.json
hub/desktop/src-tauri/src/: main.rs
scripts/: TOOL_IMPL_GUIDE.md
tools/_template/: package.json
tools/alarm/: package.json
tools/base-convert/: package.json
tools/base64/: package.json
tools/base64-image/: package.json
tools/bmi-bfr-bmr/: package.json
tools/calc/: package.json
tools/case-convert/: package.json
tools/color-converter/: package.json
tools/color-palette/: package.json
tools/compound-interest/: package.json
tools/countdown/: package.json
tools/cron-parser/: package.json
tools/css-js-minify/: package.json
tools/csv-tsv/: package.json
tools/currency-exchange/: package.json
tools/curtain-calc/: package.json
tools/date-calc/: package.json
tools/dedup-sort/: package.json
tools/diff-tool/: package.json
tools/electricity-cost/: package.json
tools/equation/: package.json
tools/font-preview/: package.json
tools/gradient-gen/: package.json
tools/graph/: package.json  tsconfig.json
tools/graphql-builder/: package.json
tools/html-entity/: package.json
tools/http-codes/: package.json
tools/invoice-tax/: package.json
(+225 files in other folders)
