[package]
name = "tooldepot-desktop"
version = "0.1.0"
description = "ToolDepot desktop shell"
edition = "2021"
rust-version = "1.77.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
